# Model-FineTuning

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml  colab_smoke.yaml  spider1_qwen25_7b.yaml  vast_5k.yaml
docs/: qwen25_spider1_remote.md
output/jupyter-notebook/: colab-qwen25-text2sql-all-in-one.ipynb  colab-qwen25-text2sql-smoke.ipynb
requirements/: colab.txt  common.txt  vast.txt
scripts/: bootstrap_linux.sh  export_model.py  infer_transformers_peft.py  infer_unsloth.py  package_artifacts.py  preprocess_gretel.py  preprocess_spider.py  run_spider1_qwen25.sh  train_unsloth.py
src/text2sql_unsloth/: __init__.py  config.py  prompting.py  sql_filters.py
